Improved script "convert-compound-export.sh" (convert indentation to spaces). Updated "compound-sample.yaml" accordingly. Added key to CompoundDocument. Added command CompoundUpdateKeyCommand and CompoundKeyUpdatedEvent. Added LedgerCompoundRepository with #findByKey method. Added @EventHandler annotation on handler for CompoundEntryAddedEvent in CompoundEventHandler. Added event handler for CompoundKeyUpdatedEvent in CompoundEventHandler. Added query CompoundByIdQuery. Added CompoundQueryHandler with handler for CompoundByIdQuery. Added command EntryUpdateDataCommand and EntryDataUpdatedEvent. Added command handler for EntryUpdateDataCommand in aggregate Entry. Added event sourcing handler for EntryDataUpdatedEvent in aggregate Entry. Added field EntryDocument#compoundId. Moved enrichment of EntryData#data from handler of EntryCreatedEvent to handler of EntryDataUpdatedEvent in EntryEventHandler. Added event handler for EntryCompoundAddedEvent to EntryEventHandler. Added entry point LedgerService#getCompound for GET "/compound/{compoundId}". Added entry point LedgerService#uploadCompoundTransactions for POST "/compound/upload"
